# agentic-dataset-builder

./: .gitignore  .npmignore  README.md  package.json  pyproject.toml  requirements.txt  run.py  run.sh  setup.bat  setup.ps1  setup.sh
agentic_dataset/: __init__.py  build_agentic_dataset.py  export_codex_session_to_qwen35.py  export_pi_session.py  export_pi_session_to_qwen35.py  export_qwen35_training.py  label_qwen35_agentic.py  platform_paths.py  qwen35_training_record.py
